--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,14 @@ jobs:
         run: npm run lint
         working-directory: ${{ env.APP_SOURCE_DIR }} # <-- FIX
 
-      #- name: 🔒 Análisis de Vulnerabilidades (Snyk)
-      #  uses: snyk/actions/node@master
-      #  env:
-      #    SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      #  with:
-      #    command: test
+      - name: 🔒 Análisis de Vulnerabilidades (Snyk)
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: test
           # ¡CORRECCIÓN! Indicamos la ruta exacta del package.json
-      #    args: --file=app_source/package.json
+          args: --file=app_source/package.json
 
       - name: 📜 Generar SBOM (CycloneDX)
         # Nota: Asumiendo que anchore/sbom-action@main es temporalmente estable
