--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,15 +38,14 @@ jobs:
         run: npm run lint
         working-directory: ${{ env.APP_SOURCE_DIR }} # <-- FIX
 
-      #- name: 🔒 Análisis de Vulnerabilidades (Snyk)
-      #  uses: snyk/actions/node@master
-        # ✅ CORRECCIÓN: Pasar el token como variable de entorno
-      #  env:
-      #    SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }} 
-      #  with:
-          # ❌ ELIMINAR ESTO: snyk-token: ${{ secrets.SNYK_TOKEN }}
-      #    command: test
-      #    args: --file=app_source/package.json
+      - name: 🔒 Análisis de Vulnerabilidades (Snyk)
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: test
+          args: --all-projects # Opcional, pero recomendado
+        working-directory: ${{ env.APP_SOURCE_DIR }} # <-- ¡Asegúrate de incluir esto!
           
       - name: 📜 Generar SBOM (CycloneDX)
         # Nota: Asumiendo que anchore/sbom-action@main es temporalmente estable
