--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,22 +38,23 @@ jobs:
         run: npm run lint
         working-directory: ${{ env.APP_SOURCE_DIR }} # <-- FIX
         
-      - name: 🔒 Análisis de Vulnerabilidades (Snyk)
-        run: |
-          cd ${{ env.APP_SOURCE_DIR }}
-          snyk test --severity-threshold=high || true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      #- name: 🔒 Análisis de Vulnerabilidades (Snyk)
+      #  run: |
+      #    cd ${{ env.APP_SOURCE_DIR }}
+      #    snyk test --severity-threshold=high || true
+      #  env:
+      #    SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           # Cambiamos al subdirectorio donde está el código real
         
-       #- name: Verificar longitud token
-       # run: echo "${{ secrets.SNYK_TOKEN }}" | wc -c
-        
-       # env:
-       #   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-       # with:
-       #  command: test
-       #   args: --all-projects # Opcional, pero recomendado
+      - name: 🔒 Análisis de Vulnerabilidades (Snyk)
+        uses: snyk/actions@master
+        continue-on-error: true
+        with:
+          command: test
+          args: '--severity-threshold=high'   # opcional pero recomendado
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        working-directory: ${{ env.APP_SOURCE_DIR }}
                   
       - name: 📜 Generar SBOM (CycloneDX)
         # Nota: Asumiendo que anchore/sbom-action@main es temporalmente estable
