Refactor Snyk vulnerability analysis in workflow
Updated Snyk vulnerability analysis step to run a command instead of using the Snyk action.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,23 +38,23 @@ jobs:
         run: npm run lint
         working-directory: ${{ env.APP_SOURCE_DIR }} # <-- FIX
         
-      #- name: 🔒 Análisis de Vulnerabilidades (Snyk)
-      #  run: |
-      #    cd ${{ env.APP_SOURCE_DIR }}
-      #    snyk test --severity-threshold=high || true
-      #  env:
-      #    SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-          # Cambiamos al subdirectorio donde está el código real
-        
       - name: 🔒 Análisis de Vulnerabilidades (Snyk)
-        uses: snyk/actions@2.16.0
-        continue-on-error: true
-        with:
-          command: test
-          args: '--severity-threshold=high'   # opcional pero recomendado
+        run: |
+          cd ${{ env.APP_SOURCE_DIR }}
+          snyk test --severity-threshold=high || true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        working-directory: ${{ env.APP_SOURCE_DIR }}
+          # Cambiamos al subdirectorio donde está el código real
+        
+      #- name: 🔒 Análisis de Vulnerabilidades (Snyk)
+      #  uses: snyk/actions@2.16.0
+      #  continue-on-error: true
+      #  with:
+      #    command: test
+      #    args: '--severity-threshold=high'   # opcional pero recomendado
+      #  env:
+      #    SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      #  working-directory: ${{ env.APP_SOURCE_DIR }}
                   
       - name: 📜 Generar SBOM (CycloneDX)
         # Nota: Asumiendo que anchore/sbom-action@main es temporalmente estable
